lsp-devtools: upgrade to pygls 2.0a2

--- a/lib/lsp-devtools/hatch.toml
+++ b/lib/lsp-devtools/hatch.toml
@@ -11,6 +11,9 @@ packages = ["lsp_devtools"]
 [envs.hatch-test]
 extra-dependencies = ["pytest-asyncio"]
 
+[envs.hatch-test.env-vars]
+UV_PRERELEASE="allow"
+
 [envs.hatch-static-analysis]
 config-path = "ruff_defaults.toml"
 dependencies = ["ruff==0.5.2"]
